Fix layout issues

--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,16 @@
     padding: 0;
 }
 
+html {
+    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Ubuntu,sans-serif;
+
+}
+
 /* layout */
 
 body {
     height: 100vh;
+    background-color: #eee;
 }
 
 .main-container {
@@ -20,7 +26,7 @@ body {
 
 
 .content {
-    flex: 5 1 0;    
+    flex: 2 1 0;    
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -45,19 +51,17 @@ body {
     position: relative;
     display: flex;
     flex-direction: column;
-    width: 100%;
+    flex: 1;
 } 
 
 input[type="text"],
 input[type="email"],
-input[type="password"] {
-    padding: 1px 3px;
-}
-
+input[type="password"],
 input[type="number"] {
-    width: 100%;
-
+    padding: 8px;
+    margin: 12px 0;
 }
+
 button {
     width: 100%;
 }
@@ -65,6 +69,8 @@ button {
 label {
     position: absolute;
     left: 0.5rem;
+    top: 1.15rem
+
 }
 
 .center{
@@ -77,19 +83,14 @@ label {
     }
 }
 
-.birthday {
+.flex-input {
     display: flex;
-    width: 100px;
+    > span {
+        align-self: center;
+        margin-right: 8px;
+    }
 }
 
-.temp-container {
-    display: flex;
-}
-
-.temp {
-    background-color: aqua;
-
-}
 input[type="checkbox"] {
     height: fit-content;
 }
